tests/paczka1/fuzzy1/97960469.err
Error in line 3: OZK S655 0,86
Error in line 4: OZK S771 62,8
Error in line 2: wcOvLvyzgb A774 15,6
Error in line 20: wcOvLvyzgb S655 84,6
Error in line 25: wcOvLvyzgb A774 87,2
Error in line 34: tn6zrNjl S655 67,0
Error in line 36: tn6zrNjl A774 3,3
